Reduce height to 98vh to avoid vertical scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@ body {
 	font-weight: 300;
     color: white;
 	overflow-x: hidden;
-    min-height: 100vh;
-    height: 100%;
+    min-height: 98vh;
+    height: 98%;
     position: relative;
 }
 
